--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+
+.loaderButton {
+  background: linear-gradient(45deg, rgba(255, 255, 255, 0.5) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.5) 25%, rgba(255, 255, 255, 0.5) 75%, transparent 75%, transparent);
+  background-size: 50px;
+  height: 100%;
+  width: 100%;
+  animation: move 1s linear infinite;
+}
+@keyframes move {
+  100% {
+    background-position: 50px 0px;
+  }
+}
